// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch [common] example testing should match snapshot(s) for IncludeExclude 1`] = `
<ul>
  <li>
    <label>
      Unselected
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-include-exclude"
    >
      <input
        class="lucid-Switch-native"
        tabindex="20"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Selected
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-selected lucid-Switch-is-include-exclude"
    >
      <input
        checked=""
        class="lucid-Switch-native"
        tabindex="21"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Disabled
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-disabled lucid-Switch-is-include-exclude"
    >
      <input
        class="lucid-Switch-native"
        disabled=""
        tabindex="22"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Disabled & selected
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-disabled lucid-Switch-is-selected lucid-Switch-is-include-exclude"
    >
      <input
        checked=""
        class="lucid-Switch-native"
        disabled=""
        tabindex="23"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
</ul>
`;

exports[`Switch [common] example testing should match snapshot(s) for Interactive 1`] = `
<ul>
  <li>
    <label>
      Enabled
    </label>
    <span
      class="lucid-Switch"
    >
      <input
        class="lucid-Switch-native"
        tabindex="10"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Disabled
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-disabled"
    >
      <input
        class="lucid-Switch-native"
        disabled=""
        tabindex="11"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
</ul>
`;

exports[`Switch [common] example testing should match snapshot(s) for States 1`] = `
<ul>
  <li>
    <label>
      Unselected
    </label>
    <span
      class="lucid-Switch"
    >
      <input
        class="lucid-Switch-native"
        tabindex="20"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Selected
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-selected"
    >
      <input
        checked=""
        class="lucid-Switch-native"
        tabindex="21"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Disabled
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-disabled"
    >
      <input
        class="lucid-Switch-native"
        disabled=""
        tabindex="22"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
  <li>
    <label>
      Disabled & selected
    </label>
    <span
      class="lucid-Switch lucid-Switch-is-disabled lucid-Switch-is-selected"
    >
      <input
        checked=""
        class="lucid-Switch-native"
        disabled=""
        tabindex="23"
        type="checkbox"
      />
      <span
        class="lucid-Switch-visualization-container"
      />
      <span
        class="lucid-Switch-visualization-handle"
      />
    </span>
  </li>
</ul>
`;
